--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,9 @@
       <div id="fashion">
         <div class="fashion-item fashion-one">
           <div class="fashion-inner inner-one">
-            <p>#chanel</p>
+            <a href="https://twitter.com/search?q=%23chanel&src=typd" target="_blank">
+              <p>#chanel</p>
+            </a>
           </div>
         </div>
         <div class="fashion-item fashion-two">
@@ -91,7 +93,9 @@
         </div>
         <div class="fashion-item fashion-three">
           <div class="fashion-inner inner-three">
-            <p>#nyfw</p>
+            <a href="https://twitter.com/search?q=%23nyfw&src=typd" target="_blank">
+              <p>#nyfw</p>
+            </a>
           </div>
         </div>
         <div class="fashion-item fashion-four">
