added last image to s3

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
             <div class="modal-box">
               <div class="modal-text">
 
-                  <img src="http://www.twochums.com/wp-content/uploads/2014/09/chanel-logo.jpg" alt="chanel nyfw">
+                  <img src="https://s3.amazonaws.com/splashklc/logo.jpg" alt="chanel nyfw">
                   <h4>RSVP</h4>
                   <form>
                     <input type="text" name="firstname" placeholder="First Name">
