footer and readme

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,7 +113,7 @@
 
     <!-- Footer -->
     <footer>
-      <p>NOT affiliated with Chanel. NOT a real event.</p>
+      <p>No affiliation with Chanel.</p>
     </footer>
 
     <!-- scripts -->
